--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/core": "^7.23.0",
     "@babel/plugin-transform-class-properties": "^7.22.5",
     "@babel/preset-env": "^7.23.0",
+    "@playwright/test": "^1.52.0",
     "@types/chrome": "^0.0.246",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.0",
